--- a/kanome.html
+++ b/kanome.html
@@ -11,7 +11,7 @@
           <a class="navigation-item" href="about.html">ABOUT</a>
           <a class="navigation-item" href="kanome.html">KANOME</a>
           <a class="navigation-item" href="syumi.html">HOBBY</a>
-          <a class="navigation-item" href="https://twitter.com/nanjatqea">twitter</a>
+          <a class="navigation-item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="50" width="50"></a>
         </nav>
       </header>
       <main>
