--- a/syumi.html
+++ b/syumi.html
@@ -6,13 +6,13 @@
   </head>
   <body>
      <header>
-        <nav class="navigation">
+        <div class="navigation">
           <a class="navigation-item" href="index.html">HOME</a>
           <a class="navigation-item" href="about.html">ABOUT</a>
           <a class="navigation-item" href="kanome.html">KANOME</a>
           <a class="navigation-item" href="syumi.html">HOBBY</a>
-          <a class="navigation-item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="50" width="50"></a>
-        </nav>
+          <a class="navigation-item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
+        </div>
       </header>
       <main>
         <h1>HOBBBY</h1>
