--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
           <a class="navigation-item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
         </nav>
       </header>
-      <main>
+      <main class=center>
         <h1>ABOUT</h1>
         <h5>VRAKI高専の電気・電子系所属しているキメラ。</h5>
         <img src="">
