--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         </nav>
       </header>
       <main>
+        <div class="right">
         <h5>高専生</h5>
         <h1>KANOME</h1>
         <h5>PDF職人。いろんなことをPDFでまとめています。まとめ依頼は<a href="https://twitter.com/nanjatqea">
         twitter</a>で。</h5>
-        <a href="kanome.html"><img src=""><p>かのめシリーズ</p></a>
-        <a href="20_0402_2300_茨城コロナ感染者まとめ.pdf"><img src=""><p>臨時・茨城コロナ関連まとめ(PDF)</p></a>
+        <a href="kanome.html"><img src="">かのめシリーズ</a>
+        <a href="20_0402_2300_茨城コロナ感染者まとめ.pdf"><img src="">臨時・茨城コロナ関連まとめ(PDF)</a>
+      </div>
       </main>
       <footer>
         made by KANOME🕊
