--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html lang="ja">
   <head>
       <link rel="stylesheet" href="style.css">
+      <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
       <title>KANOME</title>
   </head>
   <body>
@@ -15,13 +16,14 @@
         </nav>
       </header>
       <main>
+        <img src="header.jpg" height="400" width="400" class="pic">
         <div class="right">
-        <h5>高専生</h5>
-        <h1>KANOME</h1>
+        <p>College student</p>
+        <div class="kanome">KANOME</div>
         <h5>PDF職人。いろんなことをPDFでまとめています。まとめ依頼は<a href="https://twitter.com/nanjatqea">
         twitter</a>で。</h5>
-        <a href="kanome.html"><img src="">かのめシリーズ</a>
-        <a href="20_0402_2300_茨城コロナ感染者まとめ.pdf"><img src="">臨時・茨城コロナ関連まとめ(PDF)</a>
+        <a href="kanome.html" class="maru">かのめシリーズ</a>
+        <a href="20_0402_2300_茨城コロナ感染者まとめ.pdf" class="maru">茨城コロナ感染(PDF)</a>
       </div>
       </main>
       <footer>
