--- a/kanome.html
+++ b/kanome.html
@@ -2,6 +2,7 @@
   <html lang="ja">
   <head>
       <link rel="stylesheet" href="style.css">
+      <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
       <title>KANOME</title>
   </head>
   <body>
@@ -18,24 +19,24 @@
         <h1>かのめシリーズ</h1>
         <h2>1年生</h2>
         <h4>前期中間試験範囲</h4>
-          <a href="前期中間政治.pdf">政治</a>
+          <a href="前期中間政治.pdf" class="shakai">政治</a>
         <h4>後期中間試験範囲</h4>
-          <a href="地理１.pdf">地理</a><br>
+          <a href="地理１.pdf" class="shakai">地理</a><br>
         <h4>後期期末試験範囲</h4>
-          <a href="どどど期末範囲.pdf">どどど</a>
-          <a href="現代文期末範囲.pdf">現代文</a>
-          <a href="古典期末範囲.pdf">古典</a>
-          <a href="地理期末範囲.pdf">地理</a>
-          <a href="政治期末範囲.pdf">政治</a>
-          <a href="経済期末範囲.pdf">経済</a>
-          <a href="保健期末範囲.pdf">保健</a>
+          <a href="政治期末範囲.pdf" class="shakai">政治</a>
+          <a href="現代文期末範囲.pdf" class="kokugo">現代文</a>
+          <a href="どどど期末範囲.pdf" class="other">どどど</a>
+          <a href="地理期末範囲.pdf" class="shakai">地理</a>
+          <a href="保健期末範囲.pdf" class="other">保健</a>
+          <a href="古典期末範囲.pdf" class="kokugo">古典</a>
+          <a href="経済期末範囲.pdf" class="shakai">経済</a>
         <h4>再試験・単元別(依頼のみ)</h4>
-          <a href="政治再試対策.pdf">政治</a>
-          <a href="対数.pdf">対数の基礎</a><br>
+          <a href="政治再試対策.pdf" class="shakai">政治</a>
+          <a href="対数.pdf" class="other">対数の基礎</a><br>
         <h2>2年生</h2>
               <h4>前期中間試験範囲</h4>
-       <a href="前期中間日本史.pdf">日本史</a>
-       <a href="前期中間現代文.pdf">現代文</a>
+       <a href="前期中間日本史.pdf" class="shakai">日本史</a>
+       <a href="前期中間現代文.pdf" class="kokugo">現代文</a>
 
       </main>
       <footer>
