--- a/syumi.html
+++ b/syumi.html
@@ -2,27 +2,28 @@
   <html lang="ja">
   <head>
       <link rel="stylesheet" href="style.css">
+      <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
       <title>KANOME</title>
   </head>
   <body>
      <header>
-        <div class="navigation">
+        <nav class="navigation">
           <a class="navigation-item" href="index.html">HOME</a>
           <a class="navigation-item" href="about.html">ABOUT</a>
           <a class="navigation-item" href="kanome.html">KANOME</a>
           <a class="navigation-item" href="syumi.html">HOBBY</a>
           <a class="navigation-item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
-        </div>
+        </nav>
       </header>
       <main>
         <h1>HOBBBY</h1>
         <h5>いろいろやってます。</h5>
-        <h5>かぎ針編み作品</h5>
+        <h4>かぎ針編み作品</h4>
         <img src="">
         <img src="">
-        <h5>イラスト墓場</h5>
+        <h4>イラスト墓場</h4>
         <img src="">
-        <h5>作曲音源墓場</h5>
+        <h4>作曲音源墓場</h4>
       </main>
       <footer>
         made by KANOME🕊
