--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
   <html lang="ja">
   <head>
       <link rel="stylesheet" href="style.css">
+      <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
       <title>KANOME</title>
   </head>
   <body>
