--- a/about.html
+++ b/about.html
@@ -17,11 +17,9 @@
       </header>
       <main class=center>
         <h1>ABOUT</h1>
-        <h5>VRAKI高専の電気・電子系所属しているキメラ。</h5>
-        <img src="">
-        <h5>永遠の2年生です。</h5>
-        <img src="">
-        <h5>お絵描きと編み物、そして彫刻が趣味です。</h5>
+        <h5>VRAKI高専の創造工学科電気・電子系に所属しているキメラ、通称「かのめちゃん」が<br>主に文系の授業を<a href="kanome.html">PDF</a>でまとめているサイトです。</h5>
+        <img src="naynn.png" height="400" width="300">
+        <h5>かのめちゃんは永遠の2年生で、お絵描きと編み物、そして彫刻が趣味です。</h5>
         <img src="">
       </main>
       <footer>
