--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="right">
         <p>College student</p>
         <div class="kanome">KANOME</div>
-        <h5>PDF職人。いろんなことをPDFでまとめています。まとめ依頼は<a href="https://twitter.com/nanjatqea">
+        <h5>いろんなことをPDFでまとめています。<br>まとめ依頼は<a href="https://twitter.com/nanjatqea">
         twitter</a>で。</h5>
         <a href="kanome.html" class="maru">かのめシリーズ</a>
         <a href="20_0402_2300_茨城コロナ感染者まとめ.pdf" class="maru">茨城コロナ感染(PDF)</a>
