--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html lang="ja">
   <head>
       <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" type="text/css" href="star.css">
       <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
       <title>KANOME</title>
   </head>
@@ -16,9 +17,9 @@
         </nav>
       </header>
       <main>
-        <img src="header.jpg" height="400" width="400" class="pic">
+        <div class="head"></div>
         <div class="right">
-        <p>College student</p>
+        <p><span>C</span><span>o</span><span>l<span></span><span>l</span><span>e</span><span>g</span><span>e</span> <span>s</span><span>t</span><span>u</span><span>d</span><span>e</span><span>n</span><span>t</span></p>
         <div class="kanome">KANOME</div>
         <h5>いろんなことをPDFでまとめています。<br>まとめ依頼は<a href="https://twitter.com/nanjatqea">
         twitter</a>で。</h5>
