--- a/syumi.html
+++ b/syumi.html
@@ -21,6 +21,8 @@
         <h4>かぎ針編み作品</h4>
         <img src="">
         <img src="">
+        <h4>手芸作品</h4>
+        <img src="">
         <h4>イラスト墓場</h4>
         <img src="">
         <h4>作曲音源墓場</h4>
