--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
   <head>
       <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
+      <link rel="icon"  href="header.jpg">
       <title>KANOME</title>
   </head>
   <body>
@@ -12,11 +13,11 @@
           <a class="navigation-item" href="about.html">ABOUT</a>
           <a class="navigation-item" href="kanome.html">KANOME</a>
           <a class="navigation-item" href="syumi.html">HOBBY</a>
-          <a class="navigation-item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
+          <a class="item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
         </nav>
       </header>
       <main class=center>
-        <h1>ABOUT</h1>
+        <h1><span>A</span><span><font color="#ff1493">B</font></span><span>O</span><span>U</span><span>T</span></h1>
         <h5>VRAKI高専の創造工学科電気・電子系に所属しているキメラ、通称「かのめちゃん」が<br>主に文系の授業を<a href="kanome.html">PDF</a>でまとめているサイトです。</h5>
         <img src="naynn.png" height="400" width="300">
         <h5>かのめちゃんは永遠の2年生で、お絵描きと編み物、そして彫刻が趣味です。</h5>
