--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" type="text/css" href="star.css">
       <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
+      <link rel="icon"  href="header.jpg">
       <title>KANOME</title>
   </head>
   <body>
@@ -13,13 +14,13 @@
           <a class="navigation-item" href="about.html">ABOUT</a>
           <a class="navigation-item" href="kanome.html">KANOME</a>
           <a class="navigation-item" href="syumi.html">HOBBY</a>
-          <a class="navigation-item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
+          <a class="item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
         </nav>
       </header>
       <main>
         <div class="head"></div>
         <div class="right">
-        <p><span>C</span><span>o</span><span>l<span></span><span>l</span><span>e</span><span>g</span><span>e</span> <span>s</span><span>t</span><span>u</span><span>d</span><span>e</span><span>n</span><span>t</span></p>
+        <p><span>C</span><span><font color="#ff1493">o</font></span><span>l<span></span><span>l</span><span>e</span><span>g</span><span>e</span> <span>s</span><span><font color="#ff1493">t</font></span><span>u</span><span>d</span><span>e</span><span>n</span><span>t</span></p>
         <div class="kanome">KANOME</div>
         <h5>いろんなことをPDFでまとめています。<br>まとめ依頼は<a href="https://twitter.com/nanjatqea">
         twitter</a>で。</h5>
