--- a/kanome.html
+++ b/kanome.html
@@ -3,6 +3,7 @@
   <head>
       <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
+      <link rel="icon"  href="header.jpg">
       <title>KANOME</title>
   </head>
   <body>
@@ -12,11 +13,11 @@
           <a class="navigation-item" href="about.html">ABOUT</a>
           <a class="navigation-item" href="kanome.html">KANOME</a>
           <a class="navigation-item" href="syumi.html">HOBBY</a>
-          <a class="navigation-item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
+          <a class="item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
         </nav>
       </header>
       <main>
-        <h1>かのめシリーズ</h1>
+        <h1><span>か</span><span><font color="#ff1493">の</font></span><span>め</span><span>シ</span><span>リ</span><span>ー</span><span>ズ</span></h1>
         <h2>1年生</h2>
         <h4>前期中間試験範囲</h4>
           <a href="前期中間政治.pdf" class="shakai">政治</a>
@@ -34,10 +35,15 @@
           <a href="政治再試対策.pdf" class="shakai">政治</a>
           <a href="対数.pdf" class="other">対数の基礎</a><br>
         <h2>2年生</h2>
-              <h4>前期中間試験範囲</h4>
-       <a href="前期中間日本史.pdf" class="shakai">日本史</a>
-       <a href="前期中間現代文.pdf" class="kokugo">現代文</a>
-
+        <h4>前期中間試験範囲</h4>
+          <a href="前期中間日本史.pdf" class="shakai">日本史</a>
+          <a href="前期中間現代文.pdf" class="kokugo">現代文</a>
+        <h4>前期期末試験範囲</h4>
+          <a href="前期期末現代文.pdf" class="kokugo">現代文</a>
+        <h4>後期中間試験範囲</h4>
+          <a href="2年後期中間国語.pdf" class="kokugo">現代文</a>
+        <h4>後期期末試験範囲</h4>
+          <a hre0="0124_日本史まとめ.pdf" class="shakai">日本史</a>
       </main>
       <footer>
         made by KANOME🕊
