--- a/syumi.html
+++ b/syumi.html
@@ -3,6 +3,7 @@
   <head>
       <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
+      <link rel="icon"  href="header.jpg">
       <title>KANOME</title>
   </head>
   <body>
@@ -12,11 +13,11 @@
           <a class="navigation-item" href="about.html">ABOUT</a>
           <a class="navigation-item" href="kanome.html">KANOME</a>
           <a class="navigation-item" href="syumi.html">HOBBY</a>
-          <a class="navigation-item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
+          <a class="item" href="https://twitter.com/nanjatqea"><img src="twitter.png" height="30" width="30"></a>
         </nav>
       </header>
       <main>
-        <h1>HOBBBY</h1>
+        <h1><span>H</span><span>O</span><span>B</span><span><font color="#ff1493">B</font></span><span>Y</span></h1>
         <h5>いろいろやってます。</h5>
         <h4>かぎ針編み作品</h4>
         <img src="">
